・sql周り ・整理

--- a/DataBase/SQLServer/断片化/断片化.md
+++ b/DataBase/SQLServer/断片化/断片化.md
@@ -2,21 +2,15 @@
 
 ---
 
-## 断片化概要
+## 概要
 
 >毎日稼働しているシステムは、日々テーブルにデータがため込まれていきます。  
 トランザクションテーブルのように最終行にデータが追加されるテーブルもあれば、マスタテーブルのように行の途中にデータを追加、またはインデックスのキー値を変更するテーブルも存在します。  
 テーブルによっては、データの物理的な順序や論理的な順序がバラバラになることがあり、このことを「断片化」と呼びます。  
 [SQL Serverの断片化したインデックスを再構築する方法](https://www.fenet.jp/dotnet/column/database/sql-server/4365/)  
 
-``` sql : 断片化確認クエリ
-declare @DB_ID int = DB_ID('DB_TEST');
-declare @OBJECT_ID int = OBJECT_ID('USER');
-
-select *
-from sys.dm_db_index_physical_stats(@DB_ID, @Object_ID, null, null, 'DETAILED') as A
-join sys.objects as B on A.object_id = B.object_id
-```
+部長曰く、データをDeleteしたとしても実質的に消えているわけではない模様。  
+そういうのの積み重ねでも物理的、論理的な順序にずれが生じることになるのだろう。  
 
 ---
 
