--- a/DataBase/デッドロック/意図的にデッドロックを発生させる.md
+++ b/DataBase/デッドロック/意図的にデッドロックを発生させる.md
@@ -1,7 +1,7 @@
 # 意図的にデッドロックを発生させるサンプル
 
 [Oracle DBでDEAD LOCKをさくっと発生させる](https://tomoima525.hatenablog.com/entry/2013/12/19/201157)  
-[デッドロックについて説明してみる - その 2 ( C# で deadlock を例外処理でキャッチしてみる ) -][https://ryuchan.hatenablog.com/entry/2016/10/16/173225]  
+[デッドロックについて説明してみる - その 2 ( C# で deadlock を例外処理でキャッチしてみる ) -](https://ryuchan.hatenablog.com/entry/2016/10/16/173225)  
 
 ---
 
