--- a/SQL/文字列関係.md
+++ b/SQL/文字列関係.md
@@ -49,8 +49,6 @@ SELECT @Val
 
 ## GroupByで文字列を集計
 
-[SQLのGroupで、文字列を集計](https://qiita.com/nuller/items/01813da7f7d60b65c220)  
-
 ``` SQL:sql serverの場合
 SELECT
     TestID,
@@ -87,9 +85,11 @@ FROM SlipTable
 GROUP BY SlipID
 ```
 
+[SQLのGroupで、文字列を集計](https://qiita.com/nuller/items/01813da7f7d60b65c220)  
+
 ---
 
-## FOR XML PATH で文字列を結合した後に前後のつなぎ文字を削除していい感じにするサンプル
+## FOR XML で文字列を結合した後に前後のつなぎ文字を削除していい感じにするサンプル
 
 2021/10/12 Tue  
 
@@ -252,8 +252,6 @@ National Languageは国語という意味ではなく「様々な国の文字」
 
 ## SQLServer 改行
 
-[T-SQL: 文字列に改行を挿入する](https://sql55.com/query/how-to-insert-carriage-return.php)  
-
 ``` sql
 SELECT 'test1' + CHAR(13) + CHAR(10) + 'test2' AS 'CR+LF';
 
@@ -271,12 +269,14 @@ OR [Field] LIKE '%'+CHAR(10) +'%'
 OR [Field] LIKE '%'+CHAR(13) +'%'
 ```
 
+[T-SQL: 文字列に改行を挿入する](https://sql55.com/query/how-to-insert-carriage-return.php)  
+
 ---
 
 ## SQLServer 正規表現
 
-[【SQL Server】WHERE句で正規表現的な検索をする](https://memorandom-nishi.hatenablog.jp/entry/2017/03/09/013222)  
 >検索をする際に、SQLServerでは正規表現を使うことはできません。  
+[【SQL Server】WHERE句で正規表現的な検索をする](https://memorandom-nishi.hatenablog.jp/entry/2017/03/09/013222)  
 
 LIKEで色々やるしかないみたい。  
 
