・カーソル処理まとめ ・整理

--- a/SQL/文字列関係.md
+++ b/SQL/文字列関係.md
@@ -49,31 +49,43 @@ SELECT @Val
 
 ## GroupByで文字列を集計
 
-``` SQL:sql serverの場合
-SELECT
-    TestID,
-    (
-        SELECT PlayerNo + ','
-        FROM TestTable1 AS t1
-        WHERE t1.TestID = t2.TestID 
-        FOR xml path('')
-    )
-FROM TestTable2 t2
-GROUP BY TestID
+serverの場合  
+`FOR XML PATH('')`を使って実現する。  
 
--- SlipID                      PlayerNo
--- ABC20200725001000009001434  ABC2020072500655,ABC2020072500655,ABC2020072500655,ABC2020072500655,
--- ABC20200725001000011000942  ABC202007250384,ABC202007250384,ABC202007250384,ABC202007250384,
--- ABC20200725001000012000176  ABC2020072500069,ABC2020072500069,ABC2020072500069,ABC2020072500069,ABC2020072500069,
--- ABC20200725001000018001431  ABC2020072500654,ABC2020072500654,ABC2020072500654,ABC2020072500654,ABC2020072500654,
+``` sql
+WITH [employee_with] AS (
+    SELECT 1 As id ,'りんご' as [name],'フルーツ' as category ,10 as kosuu
+    UNION
+    SELECT 2,'みかん','フルーツ',20
+    UNION
+    SELECT 3,'にんじん','野菜',30
+    UNION
+    SELECT 4,'大根','野菜',40
+)
+SELECT 
+    [category] ,
+    STUFF(
+        (
+            SELECT ',' + [name] 
+            FROM [employee_with] AS [T1]
+            WHERE [T1].[category] = [T2].[category]
+            FOR XML PATH('')
+        ),
+        1, 1, ''
+    )
+FROM [employee_with] AS [T2]
+GROUP BY [category]
+
+-- category  (列名なし)
+-- フルーツ  りんご,みかん
+-- 野菜      にんじん,大根
 ```
 
-FOR XML PATHは指定したフィールドの要素をXMLタグで囲う動作をするらしい。  
-なので仮に`SELECT TOP 3 PlayerNo + ',' FROM SlipTable FOR xml path('a')`と書いた場合、  
-`<a>ABC202007250541,</a><a>ABC202007250541,</a><a>ABC202007250541,</a>`となる。  
-PATH('')とするのは、空白のタグで前後を囲う動作というわけだ。  
+[SQLのGroupで、文字列を集計](https://qiita.com/nuller/items/01813da7f7d60b65c220)  
 
-[【MySQL】GROUP_CONCAT()を使ってみる](https://www.softel.co.jp/blogs/tech/archives/3154)  
+mariaDBの場合  
+GROUP_CONCAT関数なるものがあるので、SQLServerほど長く書く必要はない。  
+
 GROUP_CONCAT関数 : group byしたときに任意の列の値を連結させる関数。  
 mysql系独自の関数見たいなので、他では使えない。  
 
@@ -85,41 +97,41 @@ FROM SlipTable
 GROUP BY SlipID
 ```
 
-[SQLのGroupで、文字列を集計](https://qiita.com/nuller/items/01813da7f7d60b65c220)  
+[【MySQL】GROUP_CONCAT()を使ってみる](https://www.softel.co.jp/blogs/tech/archives/3154)  
 
 ---
 
-## FOR XML で文字列を結合した後に前後のつなぎ文字を削除していい感じにするサンプル
+## STUFF関数
 
 2021/10/12 Tue  
 
-`SELECT TOP 3 PlayerNo + ',' FROM SlipTable FOR xml path('')`だと`ABC202007250541,ABC202007250541,ABC202007250541,`となり、最後にコロンがついてしまうので、消したいなってことでやった。  
+FOR XML で文字列を結合したときに活躍  
+`SELECT PlayerNo + ',' FROM SlipTable FOR xml path('')`とすると`ABC202007250541,ABC202007250541,ABC202007250541,`となり、最後にコロンがついてしまう。  
 
 STUFF関数なるものを使うことで解決することができた。  
+
 `STUFF(置換対象文字列、開始位置、終了位置、置換文字)`  
 XML PATHのコロンの位置を先頭に持ってきて、先頭のコロンを消すことで実現した訳である。  
 
 ``` SQL
 -- 置換対象,開始位置、終了位置、置換文字
-SELECT STUFF( (SELECT TOP 3 ',' + PlayerNo FROM SlipTable FOR xml path('')) , 1 , 1 , '')
--- ABC202007250541,ABC202007250541,ABC202007250541
+SELECT STUFF((SELECT ',' + PlayerNo FROM SlipTable FOR xml path('')) , 1 , 1 , '')
 
--- ABC202007250541,ABC202007250541,ABC202007250541
+-- ,TYPE).value はFOR XML側で解説する
 SELECT STUFF(
-    (SELECT TOP 3 ',' + TestID FROM TestTable FOR xml path(''),TYPE).value('.', 'NVARCHAR(MAX)'),
-    1,
-    1,
-    ''
+    (SELECT ',' + TestID FROM TestTable FOR xml path(''),TYPE).value('.', 'NVARCHAR(MAX)'),
+    1,1,''
 )
+
+-- どちらも結果は以下のようになる。  
+-- ABC202007250541,ABC202007250541,ABC202007250541
 ```
 
 ---
 
-## FOR XML PATHで文字をつなげつつ、重複は削除する例
+## FOR XML で文字をつなげつつ、重複は削除する例
 
-[SQL Serverで取得結果行を1列に連結するSQL(FOR XML PATH)](https://fumokmm.github.io/it/sqlserver/for_xml_path)  
-
-このサイトに使い方全部乗ってる。  
+重複を削除した結果のサブクエリを元にGROUPBYして文字列を連結すればよろしい。  
 
 ``` sql
 SELECT
@@ -134,6 +146,9 @@ ORDER BY
     a.TEAM
 ```
 
+このサイトに使い方全部乗ってる。  
+[SQL Serverで取得結果行を1列に連結するSQL(FOR XML PATH)](https://fumokmm.github.io/it/sqlserver/for_xml_path)  
+
 ---
 
 ## Substring
@@ -142,8 +157,10 @@ ORDER BY
 答えられなかったのだが、Len(空白) = 0になって 0-1 = -1 で、マイナスを第3引数に指定するとエラーになるってのが原因だった。  
 気になって調べたらいろいろわかったので沼にはまってしまった。  
 
+``` sql
 SUBSTRING ( expression ,start , length )  
 SUBSTRING (抜き出す文字列, 開始地点, 切り取り文字数)  
+```
 
 対象の文字列  
 切り取る対象の文字列を指定します。  
@@ -229,24 +246,23 @@ SELECT REPLACE('SATOU','Z','Y') ;
 1. Unicodeを使うという宣言・マーキング  
 2. 日本語を使う場合に必須  
 
-[SQLのNプレフィックスっていったい何？](http://once-and-only.com/programing/sql/sql%E3%81%AEn%E3%83%97%E3%83%AC%E3%83%95%E3%82%A3%E3%83%83%E3%82%AF%E3%82%B9%E3%81%A3%E3%81%A6%E3%81%84%E3%81%A3%E3%81%9F%E3%81%84%E4%BD%95%EF%BC%9F/)
-
 >SQL Server で Unicode 文字列定数を扱う場合には、Unicode 文字列の前に大文字の N が必ず必要です。  
 >これは、SQL Server Books Online の「Unicode データの使用」で説明されています。  
 >”N” プレフィックスは、SQL-92 標準の National Language を意味し、必ず大文字にする必要があります。  
 >Unicode 文字列定数の前に N を付加しない場合、その文字列は、SQL Server によって、使用される前に現在のデータベースの Unicode 以外のコードページに変換されます。  
+[SQLのNプレフィックスっていったい何？](http://once-and-only.com/programing/sql/sql%E3%81%AEn%E3%83%97%E3%83%AC%E3%83%95%E3%82%A3%E3%83%83%E3%82%AF%E3%82%B9%E3%81%A3%E3%81%A6%E3%81%84%E3%81%A3%E3%81%9F%E3%81%84%E4%BD%95%EF%BC%9F/)
+
+<!--  -->
+>N'***' とT-SQL内で書くと、''内の文字をUnicodeで表現されたものとして処理する、という意味になります。  
+>Nは、nationalの略です。  
+>ですから、日本語を使おうとするとNは必須になる、という事ですね。  
+>こんな感じでつかいます。＃N'Unicode 文字列'  
+[MS SQLServer のSQLで文字列の前にN:](https://oshiete.goo.ne.jp/qa/280266.html)  
 
 ※Unicodeは何故UじゃなくてNなのか？  
 →  
 National Languageという意味でUnicodeが採用されているため。  
 National Languageは国語という意味ではなく「様々な国の文字」というニュアンス。  
-
-[MS SQLServer のSQLで文字列の前にN:](https://oshiete.goo.ne.jp/qa/280266.html)
-
->N'***' とT-SQL内で書くと、''内の文字をUnicodeで表現されたものとして処理する、という意味になります。  
->Nは、nationalの略です。  
->ですから、日本語を使おうとするとNは必須になる、という事ですね。  
->こんな感じでつかいます。＃N'Unicode 文字列'  
 
 ---
 
