--- a/DataBase/SQLServer/Error/エラー.md
+++ b/DataBase/SQLServer/Error/エラー.md
@@ -4,11 +4,19 @@
 
 ## 意図的にエラーを起こす方法
 
+発生させるだけならこれで十分。
+
+``` sql
+SELECT 1/0
+```
+
 ### RAISERROR
 
 ``` sql
 RAISERROR ([error_message], [severity], [state]);
+```
 
+``` sql
 -- 例:severity 16 で、Error!!! というエラーメッセージでエラーを起こしたい場合
 RAISERROR ('Error!!!', 16, 1);
 ```
@@ -19,7 +27,9 @@ SQL Server 2012 以降は THROW ステートメントが追加され、RAISERROR
 
 ``` sql
 THROW [error_number], [error_message], [state];
+```
 
+``` sql
 -- 例:「Error!!!」 というエラーメッセージでエラーを起こしたい場合。  
 THROW 50000, 'Error!!!', 1;
 ```
