・FOR XML,Orderby,DISTINCT ・整理

--- a/SQL/文字列関係.md
+++ b/SQL/文字列関係.md
@@ -4,6 +4,7 @@
 
 ## 文字列分割
 
+■**SQLServerの場合**  
 [SQLServerで指定した文字で文字列を分割する](https://it-engineer-info.com/database/divide-string)  
 
 ### SUBSTRING方式
@@ -20,12 +21,12 @@ SELECT
 
 ### STRING_SPLIT
 
-SQL Server 2016以降では「STRING_SPLIT」という関数が実装されています。  
+2016以降で使用可能な関数
 
-[【T-SQL】文字列を分割して〇番目の値を取得したい場合 (string_split)](http://ubisnews.blogspot.com/2018/07/t-sql-stringsplit.html)  
 >T-SQL(SQLSERVER)で文字列を分割したいと思ったところ、調べるとstring_split関数というものが利用できるとわかりました。  
 >ただ分割した文字列は表になり分割後の文字をサクッと取り出す方法が探しても見つからなかったのでメモしておこうと思います。  
 >例えば、abc,def,ghiという文字列をカンマ(,)で分割して2番目の値(ここではdef)を取り出したい場合  
+[【T-SQL】文字列を分割して〇番目の値を取得したい場合 (string_split)](http://ubisnews.blogspot.com/2018/07/t-sql-stringsplit.html)  
 
 ``` sql
 DECLARE @Val AS VARCHAR(10) --取得する値を格納する変数
@@ -49,11 +50,16 @@ SELECT @Val
 
 ## GroupByで文字列を集計
 
-serverの場合  
+■**serverの場合**  
+
 `FOR XML PATH('')`を使って実現する。  
+GROUP BYとDISTINCTでそれぞれ実現できる。  
+
+単純な重複を削除しつつの集約ならDISTINCTでよさそう。  
+集約関数を用いて複雑な操作が必要ならGROUP BYを使えばよさそう。  
 
 ``` sql
-WITH [employee_with] AS (
+WITH [Product] AS (
     SELECT 1 As id ,'りんご' as [name],'フルーツ' as category ,10 as kosuu
     UNION
     SELECT 2,'みかん','フルーツ',20
@@ -67,23 +73,59 @@ SELECT
     STUFF(
         (
             SELECT ',' + [name] 
-            FROM [employee_with] AS [T1]
+            FROM [Product] AS [T1]
+            WHERE [T1].[category] = [T2].[category]
+            FOR XML PATH('')
+        ),
+        1, 1, ''
+    ) AS [name]
+FROM [Product] AS [T2]
+GROUP BY [category]
+
+-- category | Name
+------------+------------------
+-- フルーツ | りんご,みかん
+-- 野菜     | にんじん,大根
+```
+
+DISTINCTの場合、イメージ的には集約されたcategoryでFOR XMLを実行して集約する感じだろうか。  
+
+直接関係ないが、SQLServerの場合は`値 AS [別名]`は`[別名] = 値`と同じ意味合いらしい。
+
+``` sql
+WITH [Product] AS (
+    SELECT 1 As id ,'りんご' as [name],'フルーツ' as category ,10 as kosuu
+    UNION
+    SELECT 2,'みかん','フルーツ',20
+    UNION
+    SELECT 3,'にんじん','野菜',30
+    UNION
+    SELECT 4,'大根','野菜',40
+)
+SELECT DISTINCT
+    [category] ,
+    [name] = STUFF(
+        (
+            SELECT ',' + [name] 
+            FROM [Product] AS [T1]
             WHERE [T1].[category] = [T2].[category]
             FOR XML PATH('')
         ),
         1, 1, ''
     )
-FROM [employee_with] AS [T2]
-GROUP BY [category]
+FROM [Product] AS [T2]
 
--- category  (列名なし)
--- フルーツ  りんご,みかん
--- 野菜      にんじん,大根
+-- category | Name
+------------+------------------
+-- フルーツ | りんご,みかん
+-- 野菜     | にんじん,大根
 ```
 
 [SQLのGroupで、文字列を集計](https://qiita.com/nuller/items/01813da7f7d60b65c220)  
+[Unable to use order by clause with for xml path properly(Sql server)](https://stackoverflow.com/questions/4387303/unable-to-use-order-by-clause-with-for-xml-path-properlysql-server)  
 
-mariaDBの場合  
+■**mariaDBの場合**  
+
 GROUP_CONCAT関数なるものがあるので、SQLServerほど長く書く必要はない。  
 
 GROUP_CONCAT関数 : group byしたときに任意の列の値を連結させる関数。  
