--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -311,6 +311,11 @@ IFTTTで、設定したメールアドレスに対する特定のメールの受
 
 ---
 
+group by distinct 速度
+[【SQL入門】group by,distinctどちらが性能がよいのか](https://forse.hatenablog.com/entry/2014/03/13/204259)  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
