--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -316,6 +316,31 @@ group by distinct 速度
 
 ---
 
+## WITHから一時テーブルを生成する
+
+WITHはちょっとしたデータを用意する分には便利なのだが、サブクエリの中で動作を確認したい時等、WITHも含めてSELECTしないとエラーとなってしまうためストレスを感じる事が多かった。  
+WITHから型定義なしでとりあえず一時テーブルを作る方法はないか考えた。  
+`SELECT * INTO dst FROM src`構文が使えるのでは？と思ってやってみたらいけた。  
+
+``` sql
+WITH WithTemp AS (
+    SELECT 'ABC20200725001000009001434' AS ID
+    UNION
+    SELECT 'ABC20200725001000011000942'
+    UNION
+    SELECT 'ABC20200725001000012000176'
+    UNION
+    SELECT 'ABC20200725001000018001431'
+)
+SELECT * INTO #TempTable FROM WithTemp
+
+DROP TABLE IF EXISTS #TempTable
+```
+
+ただ、テーブルを作るのが面倒くさいと思っていたが、DECLAREと同じ要領でやればいいだけ、と考えれば、CREATETABLEから一時テーブルを作る事なんて大したことではないのかもしれないと思ったり。  
+
+---
+
 ## 雑記
 
 [新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
