・SQLパフォーマンス向上について ・整理

--- a/DataBase/SQLServer/断片化/断片化.md
+++ b/DataBase/SQLServer/断片化/断片化.md
@@ -14,6 +14,6 @@
 
 ---
 
-## sp_updatestats
+## 断片化によるパフォーマンス改善
 
-[統計情報を更新してクエリのパフォーマンスを改善する](https://www.projectgroup.info/tips/SQLServer/MSSQL_00000027.htm)  
+[SQL Serverにおけるインデックスの再構成と再構築の性能比較](https://techblog.zozo.com/entry/sqlserver-index-reorganize-vs-rebuild)  
