--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -181,6 +181,17 @@ C# send post
 全く手を付けていない。
 というか、手を付ける以前にもっと学ぶべき基礎的なモノが次から次へと出てきてそれどころではないのもある。
 
+
+・Bindingの書き方。プロパティ構文でプロパティに値を代入するやり方
+・xaml,livetのエラー
+・実行計画のみかた
+・TransactionScopeの分散トランザクション
+・Converterの依存プロパティへの値の設定の仕方をまとめたい。
+・クラス図と関連のまとめ
+・コマンドまとめ
+・Laravelになれる。PHPになれる。
+
+
 ---
 
 ## 終わったやつら
