--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -312,6 +312,29 @@ SELECT DISTINCT AField,BField FROM B
 
 あぁ、やらかしてるな。
 
+``` sql
+WITH TmpTable AS (
+    SELECT 1 AS ID, 1 AS RowNum, 'and seventy nine' AS [Data]
+    UNION
+    SELECT 1, 2, 'five hundred'
+    UNION
+    SELECT 1, 3, 'two thousand'
+)
+select
+    ID,
+    [Data]
+from
+    (SELECT * FROM TmpTable ORDER BY RowNum DESC ) t1
+group by
+    t1.ID
+
+-- メッセージ 1033、レベル 15、状態 1、行 12
+-- TOP、OFFSET、または FOR XML が指定されていない場合、ビュー、インライン関数、派生テーブル、サブクエリ、および共通テーブル式では ORDER BY 句は無効です。
+```
+
+ソートはかなり重い処理に分類されるため、基本的に一番最後に行う。  
+それだけで頻繁にやるべきでないことは分かるし、一番最後に出力する時にだけ行うべきってことが自然と分かるだろう。  
+
 ---
 
 ## Turing.comからのオファー
