--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -298,8 +298,33 @@ IFTTTで、設定したメールアドレスに対する特定のメールの受
 
 ---
 
-・group by distinct 速度
-[【SQL入門】group by,distinctどちらが性能がよいのか](https://forse.hatenablog.com/entry/2014/03/13/204259)  
+・なぜwhere inは重いのか
+sql インデックス 仕組み
+[インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)
+
+sql where 仕組み
+[SELECT文の処理の仕組みを説明してみた。](https://nattou-curry-2.hatenadiary.org/entry/20090315/1237089749)
+
+・DB制約まとめ
+・ロックのまとめ
+
+LEFT OUTER JOIN A
+RIGHT OUTER JOIN B
+ON A.aa = B.aa
+ON A.bb = oya.bb
+
+この構文は
+
+LEFT OUTER JOIN A ON B
+A.aa = B.aa
+LEFT OUTER JOIN B ON oya
+
+でよいのでは説。
+
+
+sqlserver データベース名 一覧
+[SQL Server でデータベースの一覧を表示する](https://docs.microsoft.com/ja-jp/sql/relational-databases/databases/view-a-list-of-databases-on-an-instance-of-sql-server?view=sql-server-ver15)
+
 
 ・重複レコードを削除する方法
 　・Window関数を使った方法(rk where rk = 1)
@@ -334,6 +359,16 @@ group by
 
 ソートはかなり重い処理に分類されるため、基本的に一番最後に行う。  
 それだけで頻繁にやるべきでないことは分かるし、一番最後に出力する時にだけ行うべきってことが自然と分かるだろう。  
+
+
+tuple is default
+
+valueTuple?
+
+defaultでnullを判定するならvaluetupleをnull許容型にしたほうがいいのでは？
+
+行けたけど、その場合valueTuple.Value.Propertyってやらないとアクセスできない。
+
 
 ---
 
