・速度 ・メモリ

--- a/SQL/速度.md
+++ b/SQL/速度.md
@@ -2,6 +2,29 @@
 
 ---
 
-## group by distinct 速度
+## group by vs distinct
+
+distinctはインデックスの影響を受けるが、group byは受けないので安定しているとか。  
+
+そもそも両者は結局ほぼ同じになるとか。  
+
+distinctは専用命令なのにgroup byは副作用で重複が削除されているだけ。  
+専用命令としてdistinctが用意されているのだから早いに決まっているし、そうじゃなければ存在価値がないという意見。  
+
+ざっと調べてみたが、わからん。  
+インデックスやバージョンにもよるっぽいが、そういうのも含めてgroup byのほうに軍配が上がる記事が多い印象。  
+ただ、重複を削除するなら専用命令であるDISTINCTのほうが可読性はいい。  
 
 [【SQL入門】group by,distinctどちらが性能がよいのか](https://forse.hatenablog.com/entry/2014/03/13/204259)  
+
+---
+
+## IN vs EXISTS vs INNER JOIN
+
+INNER JOIN > EXISTS > IN
+
+[IN 句と EXISTS 句で実行速度が速いのはどちらの方か検証してみました | SQL Server](https://itblogdsi.blog.fc2.com/blog-entry-406.html)
+
+EXISTSの平均は1+N/2。  
+早い段階で見つかればそれで処理終了だが、見つからない場合は全件捜査する。  
+なので遅いという結論。  
