--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -298,6 +298,32 @@ IFTTTで、設定したメールアドレスに対する特定のメールの受
 
 ---
 
+## メモリ
+
+・変数はメモリのアドレスに名前をつけている？値を入れることで始めてメモリが確保される？それとも変数名を定義した瞬間メモリが確保される？
+メモリに名前をつけただけで領域は確保されない？
+
+変数はメモリのアドレスと紐づける。
+C#で変数を宣言するだけで使わない場合、コンパイラが宣言しなかったときと同じ扱いにしてくれるのではなかろうか。
+だから、使うなら領域を確保するし、しないなら宣言していないのと同じ状態としてくれるのではなかろうか。
+そこらへんはコンパイラのさじ加減によるだろう。
+親切なコンパイラならわざわざ確保する事はないだろうし、そうでないならアドレスと紐づけはしつつ、内部には何も入れないみたいな感じになるのでは？
+
+いや、違うな。
+変数を宣言した場合、そのアドレスと紐づけはするけど、その中身は操作しないことになるのか？
+だからコンパイルの段階で紐づけをしないようにしてもらわないと、そのアドレスにアクセスできないことになる可能性があるのか。
+
+まぁ、使わない変数を定義したところで、使っていないのだから定義すべきではないし、それだけの話だった気がする。  
+
+[[変数] 変数とメモリ](https://zenn.dev/antez/books/568dd4d86562a1/viewer/09848c)  
+[プログラムがメモリをどう使うかを理解する(1)](https://zenn.dev/rita0222/articles/e6ff75245d79b5)  
+[プログラムがメモリをどう使うかを理解する(2)](https://zenn.dev/rita0222/articles/beda4311d9a6bf)  
+[プログラムがメモリをどう使うかを理解する(3)](https://zenn.dev/rita0222/articles/f59b79bab45a2a)  
+[プログラムがメモリをどう使うかを理解する(4)](https://zenn.dev/rita0222/articles/1f37a5bf910282)  
+<https://twitter.com/404death/status/968381431146778624/photo/1>  
+
+---
+
 ・なぜwhere inは重いのか
 sql インデックス 仕組み
 [インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)
