--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -324,6 +324,72 @@ C#で変数を宣言するだけで使わない場合、コンパイラが宣言
 
 ---
 
+## CONSTRAINT 句
+
+`CONSTRAINT [○○_PKC] PRIMARY KEY ([フィールド1],[フィールド2],・・・)`  
+
+テーブルのインデックスフォルダの中を見ると`Customers_PKC(クラスター化)`という名称でインデックスが生成される。  
+CONSTRAINT でインデックス名の指定をしない場合`PK_Customer_*****(クラスター化)`という名称でインデックスが生成される。  
+`*****(`の部分16桁のランダムな16進数となる模様。  
+
+``` sql
+CREATE TABLE Customers(
+    CustomerID nvarchar(20), 
+    CustomerName nvarchar(20), 
+    CustomerAdd nvarchar(50) NULL,
+    PRIMARY KEY(CustomerID,CustomerName)
+);
+```
+
+``` sql
+CREATE TABLE Customers(
+    CustomerID nvarchar(20), 
+    CustomerName nvarchar(20), 
+    CustomerAdd nvarchar(50) NULL,
+    CONSTRAINT [Customers_PKC]
+    PRIMARY KEY(CustomerID,CustomerName)
+);
+```
+
+CONSTRAINT : 制限、強制  
+
+[SQL文でのINDEX句、CONSTRAINT句について](https://toru-takagi.dev/article/3)  
+
+---
+
+## PRIMARY KEY指定
+
+主キーが1つだけの場合は`フィールド名 型 PRIMARY KEY`でもよいし、一番最後に`PRIMARY KEY (フィールド名)`のどちらでもよい。  
+主キーが複数の場合は、CREATE TABLEの一番最後に`PRIMARY KEY (フィールド1,フィールド2,・・・)`の形でなければならない。  
+
+``` sql
+CREATE TABLE Customers(
+    CustomerID nvarchar(20), 
+    CustomerName nvarchar(20), 
+    CustomerAdd nvarchar(50) NULL,
+    PRIMARY KEY(CustomerID)
+);
+```
+
+``` sql
+CREATE TABLE Customers(
+    CustomerID nvarchar(20) PRIMARY KEY,
+    CustomerName nvarchar(20),
+    CustomerAdd nvarchar(50) NULL
+);
+```
+
+``` sql
+CREATE TABLE Customers(
+    CustomerID nvarchar(20), 
+    CustomerName nvarchar(20), 
+    CustomerAdd nvarchar(50) NULL,
+    CONSTRAINT [Customers_PKC] PRIMARY KEY(CustomerID)
+);
+```
+
+---
+
 ・なぜwhere inは重いのか
 sql インデックス 仕組み
 [インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)
