・デリゲートのターゲット推論 ・プリペアードステートメント ・sql速度まとめ ・整理

--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -2,20 +2,18 @@
 
 ---
 
-調査報告
+## 概要
 
-運用方法について
-
----
-
-インフラを想定した本番環境への構造適用について
+[DBのバージョン管理で苦労しないために](https://blog.frevo-works.co.jp/entry/2019/01/23/125756)  
+[.NET Core で DBマイグレーションを試したら色々ハマった話](https://blog.ecbeing.tech/entry/2019/06/12/125411)  
+[データベーススキーマ変更の失敗しにくい管理方法](https://qiita.com/suin/items/fd996de8c5d58d95047d)  
+[Entity Frameworkのベストプラクティス-EFCoreをデータアクセスとして選択する必要がありますか？](https://www.youtube.com/watch?v=qkJ9keBmQWo)  
 
 ---
 
 SQL Server データベース プロジェクト
 名前的にそれっぽいものかと思いましたが構造を管理するものとは少し違いました。
-.NetFrameworkに依存していて、
-直接Linuxで動かすこともできないのであまり詳しくは調べていません。
+.NetFrameworkに依存していて、直接Linuxで動かすこともできないのであまり詳しくは調べていません。
 
 Entity Framework 6（EF6）
 .NetCore対応の旧EntityFramework互換品。
@@ -68,7 +66,8 @@ dotnet-ef（.NET Core CLIツール）
 Microsoft.EntityFrameworkCore.Toolsと同等のことが可能。
 
 ASP.Net Core
-サービス（IISならアプリケーションプール）実行ごとにappsettings.jsonを参照してマイグレーションを実行することが出来る。失敗してもtry-catchでメッセージを取得でき、掌握すれば続行もできる。
+サービス（IISならアプリケーションプール）実行ごとにappsettings.jsonを参照してマイグレーションを実行することが出来る。  
+失敗してもtry-catchでメッセージを取得でき、掌握すれば続行もできる。  
 
 コンソールアプリ
 自作実行ファイルでマイグレーションを実行することが出来る。失敗してもtry-catchでメッセージを取得でき、掌握すれば続行もできる。ただし、接続先を外部から注入するのは面倒かもしれない。
