--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -315,6 +315,48 @@ C#で変数を宣言するだけで使わない場合、コンパイラが宣言
 
 まぁ、使わない変数を定義したところで、使っていないのだから定義すべきではないし、それだけの話だった気がする。  
 
+``` C#
+    static void Main(string[] args)
+    {
+        System.Diagnostics.Process hProcess = System.Diagnostics.Process.GetCurrentProcess();
+
+        //Console.WriteLine("BaseAddress     :0x" + Convert.ToString(hProcess.MainModule.BaseAddress.ToInt64(), 16));
+        //Console.WriteLine("EntryPoint      :0x" + Convert.ToString(hProcess.MainModule.EntryPointAddress.ToInt64(), 16));
+        //Console.WriteLine("ModuleMemorySize:" + hProcess.MainModule.ModuleMemorySize);
+        //Console.WriteLine("WorkingSet      :" + hProcess.WorkingSet64);
+
+        //hProcess.Refresh();
+        //Console.WriteLine($"物理メモリ使用量: {hProcess.WorkingSet64}\r\n仮想メモリ使用量: {hProcess.VirtualMemorySize64}");
+        ////int a;
+        //hProcess.Refresh();
+        //Console.WriteLine($"物理メモリ使用量: {hProcess.WorkingSet64}\r\n仮想メモリ使用量: {hProcess.VirtualMemorySize64}");
+
+        Console.WriteLine($"現在のメモリ使用量は{Environment.WorkingSet:N0}byteです。");
+        Console.WriteLine($"現在のメモリ使用量は{Environment.WorkingSet:N0}byteです。");
+
+        Console.WriteLine($"現在のメモリ使用量は{Environment.WorkingSet:N0}byteです。");
+        int a = 0;
+        int j;
+        Console.WriteLine($"{a:N0}");
+        Console.WriteLine($"現在のメモリ使用量は{Environment.WorkingSet:N0}byteです。");
+
+        // aaaaa();
+    }
+
+    // unsafe句を使う場合はデバッグオプションでunsafeを許可する必要がある。
+    // まぁ、unsafeって書いて「ctrl + .」でヒント出てくるはずだからそれ使えばよろしい。
+    static unsafe void aaaaa()
+    {
+        int a = 100;
+        int* b = &a;
+
+        Console.WriteLine(Convert.ToString((int)&a, 16));
+        Console.WriteLine("0x" + Convert.ToString((int)b, 16));
+
+        Console.Read();
+    }
+```
+
 [[変数] 変数とメモリ](https://zenn.dev/antez/books/568dd4d86562a1/viewer/09848c)  
 [プログラムがメモリをどう使うかを理解する(1)](https://zenn.dev/rita0222/articles/e6ff75245d79b5)  
 [プログラムがメモリをどう使うかを理解する(2)](https://zenn.dev/rita0222/articles/beda4311d9a6bf)  
@@ -452,43 +494,16 @@ group by
 ソートはかなり重い処理に分類されるため、基本的に一番最後に行う。  
 それだけで頻繁にやるべきでないことは分かるし、一番最後に出力する時にだけ行うべきってことが自然と分かるだろう。  
 
-
-tuple is default
-
-valueTuple?
-
-defaultでnullを判定するならvaluetupleをnull許容型にしたほうがいいのでは？
-
-行けたけど、その場合valueTuple.Value.Propertyってやらないとアクセスできない。
-
 ---
 
-## Task.WaitAll and Exceptions
+## プリペアードステートメント
 
-実務において発生。  
-ASP.Net側  
-Task.WaitAllで実行しているタスクの中でエラーが発生した場合、エラーが`AggregateException`にラッピングされ、単純なメッセージだけをエラー表示できなかった。  
+SQL文で値がいつでも変更できるように、変更する箇所だけ変数のようにした命令文を作る仕組みのこと。  
+パラメータクエリともいうらしい。  
+Dapperにおいて`@変数`として動的にSQL文を組み立てるあの部分がそういうことになる。  
 
-``` C#
-    Task t1 = Task.Factory.StartNew(() => Task.Delay(1000));
-    Task t2 = Task.Factory.StartNew(() => {
-        Task.Delay(500);
-        throw new Exception("Oops");
-    });
-
-    try
-    {
-        Task.WaitAll(t1, t2);
-        System.Diagnostics.Debug.WriteLine("All done");
-    }
-    catch (AggregateException e)
-    {
-        System.Diagnostics.Debug.WriteLine("Something went wrong");
-        throw e.InnerException;
-    }
-```
-
-[Task.WaitAll and Exceptions](https://stackoverflow.com/questions/4217643/task-waitall-and-exceptions)  
+[プリペアドステートメントを利用してデータを取得する方法について解説！](https://qiita.com/wakahara3/items/d7a3674eecd3b021a21e)  
+[C# .NET パラメータクエリでSQLインクジェクション対策](https://greentown.tokyo/dotnet-sqlinjection/)  
 
 ---
 
