・コラムまとめ ・テーブル検索クエリ ・整理

--- a/DataBase/インデックス.md
+++ b/DataBase/インデックス.md
@@ -4,3 +4,4 @@
 
 [インデックスと実行計画を理解する@SQLServer](https://qiita.com/okuzou1/items/f710bcde64beb22cd50b)  
 [SQL Serverのインデックスの理解を深める](https://qiita.com/fuk101/items/2e6a225a97a14f0f2850)  
+[インデックスとは？仕組みをわかりやすく解説](https://products.sint.co.jp/siob/blog/index)  
