--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -7,7 +7,10 @@
 [DBのバージョン管理で苦労しないために](https://blog.frevo-works.co.jp/entry/2019/01/23/125756)  
 [.NET Core で DBマイグレーションを試したら色々ハマった話](https://blog.ecbeing.tech/entry/2019/06/12/125411)  
 [データベーススキーマ変更の失敗しにくい管理方法](https://qiita.com/suin/items/fd996de8c5d58d95047d)  
+[Entity Framework のマイグレーションを基礎から理解する](https://qiita.com/yutotakakura/items/31ab539321502deacd88)  
+
 [Entity Frameworkのベストプラクティス-EFCoreをデータアクセスとして選択する必要がありますか？](https://www.youtube.com/watch?v=qkJ9keBmQWo)  
+[CRUD with a .NET 6 Web API & Entity Framework Core 🚀 Full Course](https://www.youtube.com/watch?v=Fbf_ua2t6v4)  
 
 ---
 
