--- a/Technology/技術的参考集.md
+++ b/Technology/技術的参考集.md
@@ -2,8 +2,6 @@
 
 ---
 
-[ソフトウェアエンジニアと技術力](https://speakerdeck.com/soudai/developer-lifework)  
-
 [レベル高いエンジニアが働く土壌ができていない状態で、お金積んでレベル高いエンジニアを雇ったらどうなるの？](https://twitter.com/shin_semiya/status/1473231873866608640)  
 →  
 辞める。  
@@ -17,6 +15,21 @@
 
 [タブがメモ帳になる](https://otona-life.com/2022/07/08/126835/)  
 urlに入力 → `data:text/html,<html contenteditable>`  
+
+---
+
+## 劣等感との付き合い方
+
+自分の強みが何なのかわからない  
+
+その答えは、簡単です。  
+「何をやっているときが楽しいですか？」  
+その「楽しいもの」が答えです。  
+
+「楽しさ」というのは、最強の強みになります。  
+「楽しい」というだけで、勝手に作業がはかどり、知識が付き、気がついたらその道のプロに到達しています。  
+
+[エンジニアの劣等感との付き合い方](https://qiita.com/karamage/items/771b633c3243989418a2)  
 
 ---
 
