・参考追加 ・整理 ・マイグレーション

--- a/DataBase/SQLServer/断片化/断片化.md
+++ b/DataBase/SQLServer/断片化/断片化.md
@@ -17,3 +17,4 @@
 ## 断片化によるパフォーマンス改善
 
 [SQL Serverにおけるインデックスの再構成と再構築の性能比較](https://techblog.zozo.com/entry/sqlserver-index-reorganize-vs-rebuild)  
+[SQL Serverで断片化率に応じてインデックスの再構築・再構成をする](https://tech-blog.cloud-config.jp/2022-07-13-sql-server-rebuild-index/)
