--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -11,6 +11,7 @@
 
 [Entity Frameworkのベストプラクティス-EFCoreをデータアクセスとして選択する必要がありますか？](https://www.youtube.com/watch?v=qkJ9keBmQWo)  
 [CRUD with a .NET 6 Web API & Entity Framework Core 🚀 Full Course](https://www.youtube.com/watch?v=Fbf_ua2t6v4)  
+[ASP.Net Core Web API - Entity Framework Core Transaction | Commit | Rollback](https://www.youtube.com/watch?v=VBFlI0-mbh4)  
 
 ---
 
@@ -74,3 +75,26 @@ ASP.Net Core
 
 コンソールアプリ
 自作実行ファイルでマイグレーションを実行することが出来る。失敗してもtry-catchでメッセージを取得でき、掌握すれば続行もできる。ただし、接続先を外部から注入するのは面倒かもしれない。
+
+---
+
+## 移行
+
+---
+
+## 逆移行
+
+SQLSV2016のRound3Dat_IntegrationText_Itouの情報を逆移行(リバースエンジニアリング)するコマンド
+
+``` txt : Scaffold-DbContext
+Scaffold-DbContext 'Data Source=SQLSV2016;Initial Catalog=Round3Dat_IntegrationTest_Itou;User ID=sa;Password=Fx67kAP;Integrated Security=False' Microsoft.EntityFrameworkCore.SqlServer -OutputDir Repository/Models -Context DatContext -ContextDir Repository –DataAnnotations –UseDatabaseNames –Force
+```
+
+`Integrated Security`がTrueだとログインできないという警告が出る。  
+Falseにすることで解決するがそれでよいかどうかは知らない。  
+SecurityをFalseにするのであまりよい印象はない。  
+
+`–UseDatabaseNames`オプションがないとテーブル名が完全一致しない。
+`TMa_Master`テーブルのテーブル名が`TmaMaster`みたいになってしまう。  
+
+[ASP.NET Core - Scaffolding with Entity Framework Core (Database first approach)](https://www.youtube.com/watch?v=SnU4Ulee_NI)  
