--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -368,11 +368,18 @@ C#で変数を宣言するだけで使わない場合、コンパイラが宣言
 
 ## CONSTRAINT 句
 
+`CONSTRAINT 制約の名前 制約`  
+
 `CONSTRAINT [○○_PKC] PRIMARY KEY ([フィールド1],[フィールド2],・・・)`  
 
 テーブルのインデックスフォルダの中を見ると`Customers_PKC(クラスター化)`という名称でインデックスが生成される。  
 CONSTRAINT でインデックス名の指定をしない場合`PK_Customer_*****(クラスター化)`という名称でインデックスが生成される。  
-`*****(`の部分16桁のランダムな16進数となる模様。  
+`*****`の部分は16桁のランダムな16進数となる模様。  
+
+制約を生成するのでFOREIGN KEY等も作成可能な模様。  
+
+CONSTRAINT句で制約名を設定しなくても複合主キーは設定できるが、ランダムチックな制約名になってしまう。  
+SQLServer2016の教科書でもできるなら任意の名前をつけたほうがよいとのこと。  
 
 ``` sql
 CREATE TABLE Customers(
@@ -388,9 +395,18 @@ CREATE TABLE Customers(
     CustomerID nvarchar(20), 
     CustomerName nvarchar(20), 
     CustomerAdd nvarchar(50) NULL,
-    CONSTRAINT [Customers_PKC]
-    PRIMARY KEY(CustomerID,CustomerName)
+    CONSTRAINT [Customers_PKC] PRIMARY KEY(CustomerID,CustomerName)
 );
+```
+
+外部キー制約も作れる。
+
+``` sql
+CONSTRAINT `制約の名前`
+    FOREIGN KEY (`このテーブルの列名を外部キーに設定`)
+    REFERENCES `データベース名`.`テーブル名` (`カラム名`)
+    ON DELETE NO ACTION ←親テーブルの削除時何もしない
+    ON UPDATE NO ACTION ←親テーブルの更新時何もしない
 ```
 
 CONSTRAINT : 制限、強制  
