スキーマ管理

--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -4,14 +4,30 @@
 
 ## 概要
 
-[DBのバージョン管理で苦労しないために](https://blog.frevo-works.co.jp/entry/2019/01/23/125756)  
-[.NET Core で DBマイグレーションを試したら色々ハマった話](https://blog.ecbeing.tech/entry/2019/06/12/125411)  
-[データベーススキーマ変更の失敗しにくい管理方法](https://qiita.com/suin/items/fd996de8c5d58d95047d)  
-[Entity Framework のマイグレーションを基礎から理解する](https://qiita.com/yutotakakura/items/31ab539321502deacd88)  
+データベースマイグレーションツール
 
-[Entity Frameworkのベストプラクティス-EFCoreをデータアクセスとして選択する必要がありますか？](https://www.youtube.com/watch?v=qkJ9keBmQWo)  
-[CRUD with a .NET 6 Web API & Entity Framework Core 🚀 Full Course](https://www.youtube.com/watch?v=Fbf_ua2t6v4)  
-[ASP.Net Core Web API - Entity Framework Core Transaction | Commit | Rollback](https://www.youtube.com/watch?v=VBFlI0-mbh4)  
+アプリケーションの変更に伴い、データベースのスキーマ情報の変更する必要がある。  
+
+- 新機能の実装に必要となるカラムを追加したい  
+- ビジネスロジックの変更に伴いカラムの制約を変更したい  
+- パフォーマンスチューニングのためにインデックスを追加したい  
+
+多くのデータベースマイグレーションツールは、現時点と最新のスキーマ情報の差分から実行が必要なDDL文だけを実行してくれます。  
+そのため、開発環境や本番環境ごとにスキーマ情報を管理し、更新に必要なDDL文を1つ1つ手動で実行するという手間を省くことができます。  
+
+クエリを作る。
+フォルダに入れる。
+フォルダの中のクエリからDBに当てる。
+その開発でいったん区切りを付けてバージョンとする。
+他の環境にデプロイする時に差分を検出して実行に必要なDDLを判断してもらう。
+
+[sqldefへのSQL Server対応のコントリビュート 〜OSS活動を通して紐解くDBマイグレーションツールの実装〜](https://techblog.zozo.com/entry/database-migration-with-sqldef)  
+
+---
+
+## マイグレーションツール一覧
+
+<https://qiita.com/cocoa-maemae/items/d55c7b53f95425efdce8>  
 
 ---
 
@@ -101,14 +117,99 @@ SecurityをFalseにするのであまりよい印象はない。
 
 ---
 
-## そもそも
+## そもそも実現したいことは？
+
+弊社におけるデータベース管理の方法  
+
+- ある時点の基準となるデータベース構造を吸い上げてマイグレーション管理する。  
+- 発行のタイミングでデプロイするプログラムが使用するデータベースとの比較を行う。  
+- その差分から変更クエリを出力する or 差分の記録を残す。  
+
+EFCoreではデータベースの構造のリバースエンジニアリングはできるけど、全部上書きしてしまうので、差分を抽出することができない。  
+モデルの生成までではなく、あくまで差分の抽出だけやってほしいのだが、リバースエンジニアリングの機能ってモデルを作りつつ、コンテキストの生成までやるし、モデルありきじゃないとコンテキストの生成はできないから、やっぱりEFCoreによるリバースエンジニアリングは駄目だな。  
+
+---
+
+目指すべきは発行のタイミングで差分を検出し、そこから適切なクエリを吐き出すことだろうか。  
+なんかそういうツール作ればいいのでは？と思ったりしなくもない。  
+コンソールアプリケーションでも十分だとは思うけど、既製品で既に存在しないか探すしかないな。  
+
+---
+
+## SQLServer
+
+DDLTriggerなるものを使えば、テーブルに対して行ったスキーマー変更の履歴を残すことができる。  
+あくまで残すだけなので、そこからどうするってのは考えないといけない。  
+
+[データベースのスキーマ変更を検出してみる(SQLServer)](https://recruit.cct-inc.co.jp/tecblog/database/ddl_trigger/)  
+
+---
+
+## DBeaver
+
+無料の複数種類のDBに対応したデータベースの操作ができるツール。  
+
+このクライアントからDBに接続して色々できる。  
+ER図とか書き起こしてくれる模様。  
+でもマイグレーション管理的な文献が見当たらなかった。  
+
+HeidiSQL
+
+---
+
+## SQL Server Data Tools
+
+>SQL Server Data Toolsは、SQL Serverを使用するアプリケーション開発者のための開発支援ツールです。  
+開発者がSQL Server Management Studioで実施していたテーブルの作成や変更などのデータベース関連タスクを、Visual Studioで完結することを目的としています。  
+<https://codezine.jp/article/detail/6531>  
+
+古いのとバージョン管理的な文言が見当たらなかった。
+
+---
+
+## FluentMigrator
+
+- DotNetのデータベース管理ライブラリ  
+- EFCoreほど大規模でガッツリしたものではない。Dapper的な立ち位置。つまりお手軽。  
+
+>dotnet系プロジェクトでのデータベースマイグレーションというと、真っ先に思いつくのがEntity Framework Core(EFCore)によるものだろう。
+実際多くの場合で、EFCoreを使えば問題は無い。
+だが、筆者の場合、クエリはほぼDapper経由で出しているため、クエリビルダ等は必要なく、欲しいものはマイグレーションのみとなる。
+マイグレーションのみの用途となると、EFCoreは大がかりに見えて、個人的にはちょっと扱いにくいなと思った。
+そこで、よりマイグレーションのみに特化したライブラリは無いものかと探して、FluentMigratorを見つけた。
+自分にとっては丁度良い規模感だったため、今回の記事で紹介する。
+
+[FluentMigratorでデータベースマイグレーションを行う(dotnet)](https://qiita.com/skitoy4321/items/ba294a3ae35b617d207f)  
+
+---
+
+## Flyway
+
+- データベースのスキーマに対してバージョン管理するツール  
+- Java製。なのでJava実行環境(JavaVirtualMachine) が必要  
+- データベース管理ツールで調べると一番に出てくる程メジャーな模様。  
+
+[Flywayの使い方](https://garafu.blogspot.com/2020/06/how-to-use-flyway.html)  
+
+---
+
+## sqldef
+
+これとflywayがツールとしては本命になりそう。  
+
+>目標とするスキーマを書くと, DBに接続して現在のスキーマと比較し, DBのスキーマが現在のスキーマに一致するように CREATE TABLE や ALTER TABLE などを実行してくれるGo製のcliツール。  
+[sqldefをマイグレーションコード生成ツールとして使う](https://kgtkr.net/blog/2022/02/10/sqldef-for-generate-migration)  
+
+[sqldefへのSQL Server対応のコントリビュート 〜OSS活動を通して紐解くDBマイグレーションツールの実装〜](https://techblog.zozo.com/entry/database-migration-with-sqldef)  
+
+---
 
 Database change management best practices
 sqlserver スキーマー　変更　追跡
 [データベースのスキーマ変更を検出してみる(SQLServer)](https://recruit.cct-inc.co.jp/tecblog/database/ddl_trigger/)  
 [DBeaver使い方メモ](https://qiita.com/12345/items/48f6856e32fd618ea307)  
 
-[方法:スキーマ比較を使用して各種のデータベース定義を比較する](https://learn.microsoft.com/ja-jp/sql/ssdt/how-to-use-schema-compare-to-compare-different-database-definitions?view=sql-server-ver16)  
+[方法:スーマ比較を使用して各種のデータベース定義を比較する](https://learn.microsoft.com/ja-jp/sql/ssdt/how-to-use-schema-compare-to-compare-different-database-definitions?view=sql-server-ver16)  
 [その他の変更の追跡の機能](https://learn.microsoft.com/ja-jp/ef/core/change-tracking/miscellaneous)  
 [SQL Server Data Tools](https://learn.microsoft.com/ja-jp/sql/ssdt/sql-server-data-tools?view=sql-server-ver16)  
 
@@ -117,4 +218,13 @@ sqlserver スキーマー　変更　追跡
 
 [C#のORM（オブジェクト関係マッピング）における理想形を考えてみる](https://qiita.com/ikuosaito1989/items/f332863dfbe5f30fdf4a)  
 
-[update-query](https://github.com/suin/update-query)  
+[sqldefへのSQL Server対応のコントリビュート 〜OSS活動を通して紐解くDBマイグレーションツールの実装〜](https://techblog.zozo.com/entry/database-migration-with-sqldef)  
+
+[DBのバージョン管理で苦労しないために](https://blog.frevo-works.co.jp/entry/2019/01/23/125756)  
+[.NET Core で DBマイグレーションを試したら色々ハマった話](https://blog.ecbeing.tech/entry/2019/06/12/125411)  
+[データベーススキーマ変更の失敗しにくい管理方法](https://qiita.com/suin/items/fd996de8c5d58d95047d)  
+[Entity Framework のマイグレーションを基礎から理解する](https://qiita.com/yutotakakura/items/31ab539321502deacd88)  
+
+[Entity Frameworkのベストプラクティス-EFCoreをデータアクセスとして選択する必要がありますか？](https://www.youtube.com/watch?v=qkJ9keBmQWo)  
+[CRUD with a .NET 6 Web API & Entity Framework Core 🚀 Full Course](https://www.youtube.com/watch?v=Fbf_ua2t6v4)  
+[ASP.Net Core Web API - Entity Framework Core Transaction | Commit | Rollback](https://www.youtube.com/watch?v=VBFlI0-mbh4)  
