--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -229,6 +229,11 @@ SQL Source Control
 
 [Using SQL Server Management Studio to Push Changes to a Git Remote Repository | Redgate](https://www.youtube.com/watch?v=Pv13GpjGVmY)
 
+database version control
+[CI/CD for SQL Databases (both SSDT and EF)- A TimCo Retail Manager Video](https://www.youtube.com/watch?v=TuHf0Ty80jA)  
+
+[SSMS でのソース管理](https://www.youtube.com/watch?v=1iJMuUDB5MU)
+
 ---
 
 ## DBeaver
