マイグレーション 参考追加

--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -211,6 +211,14 @@ database migration sqlserver
 [データベースの変更追跡 (Visual Studio と Git を使用)](https://www.youtube.com/watch?v=skPhTDlaPEA)  
 [Introduction to SQL Server Change Tracking](https://www.youtube.com/watch?v=ZNUN9qejCfc)  
 
+Visual Studio database project best practices
+visual studio database project deploy
+
+[DATABASE DEVELOPMENT IN VISUAL STUDIO](https://marcin.gminski.net/blog/database-development-in-visual-studio/)
+[Top Features in SQL Server Data Tools for Database Projects](https://www.mssqltips.com/sqlservertip/6749/ssdt-top-features-database-projects/)
+[Best Practices for multi-environment database development](https://sqlbits.com/Sessions/Event14/Best_Practices_for_multi-environment_database_development_in)
+[Visual Studio で SQL Server データベース プロジェクトを作成する方法](https://www.c-sharpcorner.com/article/how-to-create-sql-server-database-project-with-visual-studio/)  
+
 ---
 
 ## SQLServer
