マイグレーション

--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -93,7 +93,8 @@
 
 ## どのようにバージョン管理すればよいか？
 
->原始的な方法として思いつくのは、テキスト化できる操作やパラメーターをSubversionやGitで管理する方法です。少人数開発で小規模アプリケーションならば、なんとかなりそうです。  
+>原始的な方法として思いつくのは、テキスト化できる操作やパラメーターをSubversionやGitで管理する方法です。  
+>少人数開発で小規模アプリケーションならば、なんとかなりそうです。  
 >しかし、規模が大きくなるほど大変になり、記録漏れも発生しそうです。  
 >
 >そのため実際には  
@@ -109,6 +110,7 @@
 >実際のところ、この分野の議論をインターネットで検索しても意見はさまざまです。  
 >それぞれのソリューションで、コンセプトや機能に違いがあり、同一基準では判断できないからです。  
 >また何が適しているのかは、使用する組織の文化やプロジェクト次第でしょう。  
+>
 >[第9回 バージョン管理していますか？](https://www.intellilink.co.jp/column/oracle/2016/080800.aspx)  
 
 ---
