--- a/.Net/.Net.md
+++ b/.Net/.Net.md
@@ -181,3 +181,5 @@ Windows 10で導入されたWindowsアプリケーションのパッケージ形
 [Xamarinのサポートは2024年5月1日で終了。マイクロソフトが.NET MAUI関連のロードマップを示す](https://www.publickey1.jp/blog/22/xamarin202451net_maui.html)  
 [Xamarin のサポート終了と .NET 統合の話](https://zenn.dev/mayuki/articles/64f86fbc1d3da0)  
 [[Microsoft] Windowsデスクトップ向け業務アプリ開発は.NETと.NET Frameworkどっち？ - 2020年3月版](https://qiita.com/sengoku/items/a93d0be65483479f1253#fn3)  
+
+[【ゆっくり解説】C# で.NETはどれを使えばいいの？たくさんのバージョンがある.NETを大雑把に解説](https://www.youtube.com/watch?v=lCiI4LwZQJk)
