--- a/DataBase/マイグレーション2.md
+++ b/DataBase/マイグレーション2.md
@@ -93,6 +93,14 @@ C#でコマンドラインツールを作って実行する形になる。
 [DbUp_Document](https://dbup.readthedocs.io/en/latest/)  
 [Getting Started With DbUp And Setting Up Azure DEVOPS Pipeline | Deploy Changes to SQL Server](https://www.youtube.com/watch?v=Jm4C-WzAdls)  
 
+[Database Migrations with DbUp](https://counihan.co.za/blog/Database-Migrations-with-DbUp/)  
+[jonathancounihan/dbup-database-migrations](https://github.com/jonathancounihan/dbup-database-migrations/blob/master/DBMigrate/Program.cs)  
+
+[Database change management](http://www.kamilgrzybek.com/database/database-change-management/)  
+[Using Database Project and DbUp for database management](http://www.kamilgrzybek.com/database/using-database-project-and-dbup-for-database-management/)  
+
+[Converting a Visual Studio database project to use DbUp migrations](https://dasith.me/2020/06/08/database-project-conversion-to-migrations/)  
+
 ---
 
 ## Evolve
