・マイグレーション ・CONSTRAINT PRIMARY KEY CLUSTERED ・整理

--- a/DataBase/SQLServer/構造関係/テーブル構造.md
+++ b/DataBase/SQLServer/構造関係/テーブル構造.md
@@ -60,3 +60,7 @@ FROM
     WHERE  Name = N'FieldName'
     AND    Object_ID = OBJECT_ID(N'[Database].[dbo].[Table]')
 ```
+
+---
+
+[SQLServerのDBの構造の差分調査](https://masalib.hatenablog.com/entry/2016/02/10/000000)  
