--- a/DataBase/マイグレーション.md
+++ b/DataBase/マイグレーション.md
@@ -22,7 +22,7 @@
 >上記の課題を解決する手段の1つとして、データベースマイグレーションツールがあります。  
 >データベースマイグレーションツールは、スキーマ情報の変更に伴うDDL文の実行を管理するためのツールです。
 >
->多くのデータベースマイグレーションツールは、現時点と最新のスキーマ情報の差分から実行が>必要なDDL文だけを実行してくれます。  
+>多くのデータベースマイグレーションツールは、現時点と最新のスキーマ情報の差分から実行が必要なDDL文だけを実行してくれます。  
 >そのため、開発環境や本番環境ごとにスキーマ情報を管理し、更新に必要なDDL文を1つ1つ手動で実行するという手間を省くことができます。  
 >
 >[sqldefへのSQL Server対応のコントリビュート 〜OSS活動を通して紐解くDBマイグレーションツールの実装〜](https://techblog.zozo.com/entry/database-migration-with-sqldef)  
@@ -93,7 +93,8 @@
 
 ## どのようにバージョン管理すればよいか？
 
->原始的な方法として思いつくのは、テキスト化できる操作やパラメーターをSubversionやGitで管理する方法です。少人数開発で小規模アプリケーションならば、なんとかなりそうです。  
+>原始的な方法として思いつくのは、テキスト化できる操作やパラメーターをSubversionやGitで管理する方法です。  
+>少人数開発で小規模アプリケーションならば、なんとかなりそうです。  
 >しかし、規模が大きくなるほど大変になり、記録漏れも発生しそうです。  
 >
 >そのため実際には  
@@ -109,6 +110,7 @@
 >実際のところ、この分野の議論をインターネットで検索しても意見はさまざまです。  
 >それぞれのソリューションで、コンセプトや機能に違いがあり、同一基準では判断できないからです。  
 >また何が適しているのかは、使用する組織の文化やプロジェクト次第でしょう。  
+>
 >[第9回 バージョン管理していますか？](https://www.intellilink.co.jp/column/oracle/2016/080800.aspx)  
 
 ---
@@ -247,12 +249,11 @@ database version control
 ## DBeaver
 
 無料の複数種類のDBに対応したデータベースの操作ができるツール。  
+HeidiSQLと同じやつ。  
 
 このクライアントからDBに接続して色々できる。  
 ER図とか書き起こしてくれる模様。  
 でもマイグレーション管理的な文献が見当たらなかった。  
-
-HeidiSQL
 
 ---
 
@@ -262,7 +263,11 @@ HeidiSQL
 開発者がSQL Server Management Studioで実施していたテーブルの作成や変更などのデータベース関連タスクを、Visual Studioで完結することを目的としています。  
 <https://codezine.jp/article/detail/6531>  
 
-古いのとバージョン管理的な文言が見当たらなかった。
+古いのとバージョン管理的な文言が見当たらなかった。  
+というか、この機能は2017年あたりからVisualStudioに統合されたっぽい？  
+DatabaseProjectにおける差分比較機能はDataToolsの機能で実装されているような感じがした。  
+
+とりあえず、あまり考えなくてよさそう。
 
 [方法:スキーマ比較を使用して各種のデータベース定義を比較する](https://learn.microsoft.com/ja-jp/sql/ssdt/how-to-use-schema-compare-to-compare-different-database-definitions?view=sql-server-ver16)  
 
@@ -281,6 +286,8 @@ HeidiSQL
 自分にとっては丁度良い規模感だったため、今回の記事で紹介する。
 
 [FluentMigratorでデータベースマイグレーションを行う(dotnet)](https://qiita.com/skitoy4321/items/ba294a3ae35b617d207f)  
+[FluentMigration の基本機能メモ](https://kendik.hatenablog.com/entry/2015/07/02/231529)  
+[C#のORM（オブジェクト関係マッピング）における理想形を考えてみる](https://qiita.com/ikuosaito1989/items/f332863dfbe5f30fdf4a)  
 
 ---
 
