--- a/DataBase/マイグレーション2.md
+++ b/DataBase/マイグレーション2.md
@@ -23,7 +23,8 @@
 Visual Studio.NETでデータベーアプリケーションを開発する場合、データ ベースでの作業をより簡単かつ迅速にするためのツールについて知っておくとよいでしょう。  
 [Visual Studio.NET Database Projects](https://www.pearsonhighered.com/assets/samplechapter/0/6/7/2/0672323435.pdf)  
 
----
+- .NetFramework依存。.NetCoreには対応していない。  
+- SQLServerしか対応していない。  
 
 ### スクリプトを実行した後のバージョン確認
 
